refactor: generalizing with recursion